# flario

./: .gitignore  CMakeLists.txt  README.md  heltec-lora-v3-esp-prog2.cfg  sdkconfig  sdkconfig.old
components/ms5611_spi/: CMakeLists.txt
components/ms5611_spi/include/: ms5611_spi.h
components/ms5611_spi/src/: ms5611_spi.cpp
docs/: decoupling-and-bypass-capacitor-selection.md  parts-list.md  pull-up-pull-down-resistor-selection.md
main/: CMakeLists.txt  barometer_sample_listener.hpp  barometer_task.cpp  barometer_task.hpp  display_task.cpp  display_task.hpp  encoder.c  encoder.example.c  encoder.h  flario.cpp  frequency_reporter.hpp  fusion_sample_listener.hpp  fusion_task.cpp  fusion_task.hpp  imu_sample_listener.hpp  imu_task.cpp  imu_task.hpp  latest.hpp  ms5611_spi.c  ms5611_spi.h  report_frequency_diag.hpp  samples.hpp  settings.c  settings.h  task_base.hpp  telemetry.cpp  telemetry.hpp  testf.c  ui_task.cpp  ui_task.hpp
src/: CMakeLists.txt  c_cpp_properties.json  sdkconfig
src/components/ms5611_spi/include/: ms5611_spi.h
src/components/ms5611_spi/src/: ms5611_spi.cpp
src/components/ms5611_task/: CMakeLists.txt
src/components/ms5611_task/include/: ms5611_task.h
src/components/ms5611_task/src/: ms5611_task.cpp
src/main/: CMakeLists.txt  flario.cpp  ms5611a.cpp
